// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG"
    >
      
    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    Your submission has been received, and will be evaluated during Review phase.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>
         
        1 : Dummy Brief #1
      </div>
      <p>
        Dummy Details #1
      </p>
    </div>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>
         
        2 : Dummy Brief #2
      </div>
      <p>
        Dummy Details #2
      </p>
    </div>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`renders empty screening object 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG"
    >

    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    Your submission has been received, and will be evaluated during Review phase.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`renders failed with warning 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__failed___1rEsJ"
    >
      Failed Screening with Warnings
    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    You have failed screening and the screener has given you the following warning.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>

        1 : Dummy Brief #1
      </div>
      <p>
        Dummy Details #1
      </p>
    </div>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>

        2 : Dummy Brief #2
      </div>
      <p>
        Dummy Details #2
      </p>
    </div>
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___1aiaS"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`renders failed without warning 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__failed___1rEsJ"
    >
      Failed Screening
    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    You have failed screening
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___1aiaS"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`renders passed with warning 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__passed___19krr"
    >
      Passed Screening with Warnings
    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    You have passed screening, but the screener has given you 2 warnings that you must fix in round 2.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>

        1 : Dummy Brief #1
      </div>
      <p>
        Dummy Details #1
      </p>
    </div>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>

        2 : Dummy Brief #2
      </div>
      <p>
        Dummy Details #2
      </p>
    </div>
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___1aiaS"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`renders passed without warning 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__passed___19krr"
    >
      Passed Screening
    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    You have passed screening.
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;

exports[`renders pending 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__pending___YZV4Z"
    >
      Pending
    </p>
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__online-review-link___14IJN"
      href=""
    >
      Online Review
    </a>
  </div>
  <p>
    Your submission has been received, and will be screened after the end of the phase
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-btn___222Uf"
    >
      <a
        className="tc-btn-default src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
        href=""
      >
        Help
      </a>
    </div>
  </div>
</div>
`;
